@@ -32,6 +32,7 @@ Version 1.6 (2.0 Alpha 6)
 -fixed other service modes
 -added SetTextureMapping2 command
 -brought back the ReverseExtents command and created new planar texture mapper
+-added the GetWallExtents and Print commands
 
 Version 1.5 (2.0 Alpha 5)
 -------------------------
